# inference-project

./: .gitignore  README.md  dashboard.py  dataloaders.py  debug.ipynb  main.py  model_comparison.ipynb  pyproject.toml  run_dashboard.py  run_experiments.py  run_inference.py
.streamlit/: config.toml
data/: ngrok_url.txt
data/outputs/avid-voice-14/: base_responses.json  finetuned_responses.json
data/outputs/gemma-2-2b-sft_crisp-armadillo-20/: base_responses.json  finetuned_responses.json
data/prompts/: comparison_queries.json
src/: dataloaders.py  model.py
