[project]
name = "inference-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "ipdb>=0.13.13",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "ipython>=8.38.0",
    "joblib>=1.5.3",
    "machine-learning-helpers",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pandas-flavor>=0.8.1",
    "polars>=1.37.0",
    "pyjanitor>=0.32.8",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.18.0",
]

[tool.uv.sources]
machine-learning-helpers = { git = "https://github.com/vmasrani/machine_learning_helpers.git" }
